--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -93,5 +93,5 @@ jobs:
       - name: add package source
         run: dotnet nuget add source https://nuget.pkg.github.com/vriesmarcel/index.json -n github -u vriesmarcel -p ${{secrets.NUGETAPIKEY}} --store-password-in-clear-text
       - name: publish
-        run: dotnet nuget push ./nupkg/**.nupkg --source github --api-key ${{secrets.NUGETAPIKEY}} 
+        run: dotnet nuget push ./nupkg/**.nupkg --source github --api-key ${{secrets.NUGETAPIKEY}} --skip-duplicate
  
