--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -91,7 +91,7 @@ jobs:
         with:
           dotnet-version: 3.1.301
       - name: add package source
-        run: dotnet nuget add source https://nuget.pkg.github.com/vriesmarcel/index.json -n github -u vriesmarcel -p ${{secrets.NUGETAPIKEY}} --store-password-in-clear-text
+        run: dotnet nuget add source https://nuget.pkg.github.com/dervistalha/index.json -n github -u dervistalha -p ${{secrets.NUGETAPIKEY}} --store-password-in-clear-text
       - name: publish
         run: dotnet nuget push ./nupkg/**.nupkg --source github --api-key ${{secrets.NUGETAPIKEY}} --skip-duplicate
  
